--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
-    height: .75em;
+    height: 1em;
 }
 .blanket.lined .blanketRow {
     border-bottom: 2px solid white;
@@ -30,7 +30,7 @@
 #colorContainer { margin-bottom: 2em; }
 
 .terracotta {
-    background-color: rgb(226, 114, 91);
+    background-color: rgb(230, 145, 87);
 }
 .mustard { 
     background-color: rgb(255, 219, 88);
@@ -39,7 +39,7 @@
     background-color: rgb(201,217,229);
 }
 .fern {
-    background-color: rgb(151,186,118);
+    background-color: rgb(185, 213, 91);
 }
 .midnightblue {
     background-color: rgb(18,52,87);
